--- a/index.html
+++ b/index.html
@@ -1,27 +1,69 @@
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YukiYama</title>
-    <script src="https://kit.fontawesome.com/16225e978a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <script
+      src="https://kit.fontawesome.com/16225e978a.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/style.css" />
     <script src="js/main.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>YukiYama Portfolio</h1>
+      <h1>YukiYama Portfolio</h1>
     </header>
     <h2>My Works</h2>
     <ul>
-        <li><a href="https://yuyuyukie.github.io/bouncing-balls/" title="bouncing-balls">bouncing-balls</a></li>
-        <li><a href="https://yuyuyukie.github.io/Flex-To-Do/" title="Flex-To-Do">Flex-To-Do</a></li>
+      <li>
+        <a href="https://hooked-type.web.app/" title="HookedType">HookedType</a
+        ><br />
+        <p>
+          React-hooksや非同期通信の学習のために作成しました。freeCodeCampサイトのチュートリアルをベースに、自分なりに機能を考えて追加しています。<br />
+          firebaseを用いてお気に入りの映画を持たせました。<br />
+          まだアップデート途中で、スマホでも崩れないように表示を修正していきたいです。
+        </p>
+      </li>
+      <li
+        ><a href="https://yuyuyukie.github.io/react-to-do/" title="React-To-Do"
+          >React-To-Do</a
+        ><br />
+        <p>
+          後述のFlex-To-DoをReactを用いて作成しています。リアルタイムなDOMの処理を簡潔にできることが衝撃的でした。
+        </p>
+      </li>
+      <li
+        ><a href="https://yuyuyukie.github.io/Flex-To-Do/" title="Flex-To-Do"
+          >Flex-To-Do</a
+        ><br />
+        <p>
+          バニラJavaScriptで作成したシンプルなToDoアプリです。手を入れられないほど煩雑になってしまって反面教師的に勉強になりました。
+        </p>
+      </li>
+      <li
+        ><a
+          href="https://yuyuyukie.github.io/bouncing-balls/"
+          title="bouncing-balls"
+          >bouncing-balls</a
+        ><br />
+        <p>
+          MDNのcanvasチュートリアルを元に作成してゲーム性を持たせました。ゲームを作るのは視覚的にも楽しく、モチベーションがかなり上がった記憶があります。<br />
+          もっとおもしろく遊んでもらえるようなものを作ってみたいです。
+        </p>
+      </li>
     </ul>
     <footer>
-        <div class="footerContents">  
-        made by YukiYama 2020
-        <a href="https://github.com/yuyuyukie" target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i> </a>
+      <div class="footerContents">
+        made by YukiYama 2021
+        <a
+          href="https://github.com/yuyuyukie"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fa fa-github"></i>
+        </a>
       </div>
     </footer>
-</body>
+  </body>
 </html>
